Admin page User addresses

--- a/PCPartsStore/Views/Account/Login.cshtml
+++ b/PCPartsStore/Views/Account/Login.cshtml
@@ -5,17 +5,17 @@
 
 <h1 class="text-center">Login</h1>
 
-<div class="login-sliding-image-container-first">
-    <div class="sliding-image-normal"></div>
-</div>
-
-<div class="login-sliding-image-container-second">
-    <div class="sliding-image-reverse"></div>
-</div>
-
-<div class="login-sliding-image-container-third">
-    <div class="sliding-image-normal"></div>
-</div>
+@* <div class="login-sliding-image-container-first"> *@
+@*     <div class="sliding-image-normal"></div> *@
+@* </div> *@
+@* *@
+@* <div class="login-sliding-image-container-second"> *@
+@*     <div class="sliding-image-reverse"></div> *@
+@* </div> *@
+@* *@
+@* <div class="login-sliding-image-container-third"> *@
+@*     <div class="sliding-image-normal"></div> *@
+@* </div> *@
 
 <div class="d-flex justify-content-center align-items-center" id="login-container">
     <form class="shadow-sm rounded bg-white" method="post" id="login-form">
