--- a/PCPartsStore/Views/Account/Register.cshtml
+++ b/PCPartsStore/Views/Account/Register.cshtml
@@ -5,19 +5,19 @@
 
 <h1 class="text-center">Register</h1>
 
-<div class="register-sliding-image-container-first">
-    <div class="sliding-image-normal"></div>
-</div>
+@* <div class="register-sliding-image-container-first"> *@
+@*     <div class="sliding-image-normal"></div> *@
+@* </div> *@
+@* *@
+@* <div class="register-sliding-image-container-second"> *@
+@*     <div class="sliding-image-reverse"></div> *@
+@* </div> *@
+@* *@
+@* <div class="register-sliding-image-container-third"> *@
+@*     <div class="sliding-image-normal"></div> *@
+@* </div> *@
 
-<div class="register-sliding-image-container-second">
-    <div class="sliding-image-reverse"></div>
-</div>
-
-<div class="register-sliding-image-container-third">
-    <div class="sliding-image-normal"></div>
-</div>
-
-<div class="d-flex justify-content-center align-items-center" id="register-container">
+<div class="d-flex justify-content-center align-items-center mt-4" id="register-container">
     <form class="shadow-sm rounded bg-white" method="post" id="register-form">
         <div asp-validation-summary="All" class="text-danger"></div>
         <div class="mb-3">
