--- a/PCPartsStore/Views/Account/EditAddress.cshtml
+++ b/PCPartsStore/Views/Account/EditAddress.cshtml
@@ -1,12 +1,15 @@
 ﻿@model PCPartsStore.Entities.Address;
 @{
-    ViewData["Title"] = "AddAddress";
+    ViewData["Title"] = "EditAddress";
 }
 
-<h1 class="text-center">Add Address</h1>
-<div class="d-flex justify-content-center align-items-center mt-3" id="add-address-container">
-    <form class="shadow-sm rounded bg-white" method="post" id="add-address-form">
+<h1>Edit Address</h1>
+<div class="d-flex justify-content-center align-items-center mt-3" id="edit-address-container">
+    <form class="shadow-sm rounded bg-white" method="post" id="edit-address-form">
         <div asp-validation-summary="All" class="text-danger"></div>
+        <div>
+            <input asp-for="Id" type="hidden">
+        </div>
         <div class="mb-3">
             <div>
                 <span asp-validation-for="ShortName" class="text-danger"></span>
@@ -47,11 +50,29 @@
             <label asp-for="Street" class="form-label"></label>
             <input asp-for="Street" class="form-control">
         </div>
-        <button type="submit" class="btn btn-primary">Add address</button>
+        <button type="submit" class="btn btn-primary" asp-action="EditAddress" asp-route-shortName="@Model.ShortName">Edit address</button>
+        <button type="button" id="button-delete-address" class="btn btn-danger align-self-end">Delete this address</button>
     </form>
 </div>
+
 
 @section Scripts
 {
     <partial name="_ValidationScriptsPartial"/>
+    <script>
+        $("#button-delete-address").on("click", function (){
+            $.ajax({
+                type: "DELETE",
+                url: "@Url.Action("DeleteAddress")",
+                data: {id: $("#Id").val()},
+                success: function (res){
+                    window.location.href = res;
+                },
+                error: function (){
+                    alert("ERROR 401: UNAUTHORIZED");
+                    window.location.reload();
+                }
+            });
+        })
+    </script>
 }
