--- a/PCPartsStore/Views/Account/AdminPage.cshtml
+++ b/PCPartsStore/Views/Account/AdminPage.cshtml
@@ -2,14 +2,9 @@
     ViewData["Title"] = "AdminPage";
 }
 
-<h1>Admin Page</h1>
-
-<div class="row">
-    @* <div class="col-lg-3 col-sm-auto"> *@
-    @*      *@
+<div class="row flex-row">
+    <partial name="AdminPageBase" view-data='@new ViewDataDictionary(ViewData) { { "PageTitle", ViewData["Title"] } }'/>
+    @* <div class="col-lg-9 col-sm-auto d-flex justify-content-center"> *@
+    @*     <h1>Hello <span class="text-decoration-underline underline">@User.Identity.Name</span>!</h1> *@
     @* </div> *@
-    <a asp-action="Index" asp-controller="Product" class="category-box nav-link text-dark col-auto d-flex align-items-center justify-content-center bg-white border border-3">
-        <h3>Products</h3>
-        <span class="category-box-tooltip">Go to products page</span>
-    </a>
 </div>
