--- a/PCPartsStore/Views/Account/AdminPageBase.cshtml
+++ b/PCPartsStore/Views/Account/AdminPageBase.cshtml
@@ -24,8 +24,8 @@
         <a class="col-lg-5 col-sm-auto text-dark text-decoration-none fs-3" asp-controller="Product" asp-action="Index">
             Products
         </a>
-        <a class="col-lg-5 col-sm-auto text-dark text-decoration-none fs-3" asp-controller="Product" asp-action="Categories">
-            Categories
-        </a>
+        @* <a class="col-lg-5 col-sm-auto text-dark text-decoration-none fs-3" asp-controller="Product" asp-action="Categories"> *@
+        @*     Categories *@
+        @* </a> *@
     </div>
 </div>
