--- a/PCPartsStore/Views/Product/Index.cshtml
+++ b/PCPartsStore/Views/Product/Index.cshtml
@@ -15,23 +15,35 @@
              view-data='@new ViewDataDictionary(ViewData) { { "PageTitle", ViewData["Title"] } }'/>
     <div class="col-lg-9 col-sm-auto d-flex justify-content-center flex-xxl-nowrap flex-wrap">
         <div class="d-flex flex-wrap gap-2">
-        @if (SignInManager.IsSignedIn(User) && User.IsInRole("Admin"))
-        {
-            <a asp-action="Add" asp-controller="Product"
+            @if (SignInManager.IsSignedIn(User) && User.IsInRole("Admin"))
+            {
+                <a asp-action="Add" asp-controller="Product"
+                   class="product-box-add nav-link text-dark col-auto d-flex align-items-center justify-content-center bg-white border border-3">
+                    <i class="bi bi-plus-circle"></i>
+                    <span class="category-box-tooltip">Add a new product</span>
+                </a>
+            }
+
+            <a asp-action="Cpu" asp-controller="Product"
                class="product-box-add nav-link text-dark col-auto d-flex align-items-center justify-content-center bg-white border border-3">
-                <i class="bi bi-plus-circle"></i>
-                <span class="category-box-tooltip">Add a new product</span>
+                <i class="bi bi-cpu"></i>
+                <span class="category-box-tooltip">Go to CPU products</span>
             </a>
-        }
-        
-        @foreach (ProductCategory productCategory in ProductCategoryRepository.GetProductCategories())
-        {
-            <a asp-controller="Product" asp-action="Products" asp-route-productCategory="@productCategory.Name"
+            <a asp-action="Gpu" asp-controller="Product"
                class="product-box-add nav-link text-dark col-auto d-flex align-items-center justify-content-center bg-white border border-3">
-                <h3>@productCategory.Name</h3>
-                <span class="category-box-tooltip">Go to @productCategory.Name products</span>
+                <i class="bi bi-gpu-card"></i>
+                <span class="category-box-tooltip">Go to GPU products</span>
             </a>
-        }
+            <a asp-action="Ram" asp-controller="Product"
+               class="product-box-add nav-link text-dark col-auto d-flex align-items-center justify-content-center bg-white border border-3">
+                <i class="bi bi-memory"></i>
+                <span class="category-box-tooltip">Go to Ram products</span>
+            </a>
+            <a asp-action="Motherboard" asp-controller="Product"
+               class="product-box-add nav-link text-dark col-auto d-flex align-items-center justify-content-center bg-white border border-3">
+                <i class="bi bi-motherboard"></i>
+                <span class="category-box-tooltip" style="font-size: 14px">Go to Motherboard products</span>
+            </a>
         </div>
     </div>
 </div>
