cart functionality; order history; bug-fixing

--- a/PCPartsStore/Views/Account/OrderDetails.cshtml
+++ b/PCPartsStore/Views/Account/OrderDetails.cshtml
@@ -1,4 +1,4 @@
-﻿@model AspStore.ViewModels.OrderHistoryDetailsViewModel;
+﻿@model PCPartsStore.ViewModels.OrderHistoryDetailsViewModel;
 @{
     ViewData["Title"] = "OrderDetails";
 }
