--- a/PCPartsStore/Views/Product/Product.cshtml
+++ b/PCPartsStore/Views/Product/Product.cshtml
@@ -31,21 +31,22 @@
                 <i class="bi bi-check-circle-fill me-1 text-success"></i>
                 <span>In stock</span>
             </div>
+
+            <div class="ps-2 pe-2 pb-1 d-flex align-items-center flex-grow-1">
+                <form method="post" asp-controller="Cart" asp-action="AddToCart" id="add-to-cart-form" class="w-100">
+                    <input type="hidden" name="id" value="@Model.Id"/>
+                    <button type="submit" class="btn btn-primary w-100 p-3">Add to cart</button>
+                </form>
+            </div>
         }
         else
         {
-            <div
-                class="col-12 fs-1 text-center pb-3 mb-3 pe-2 border-bottom d-flex align-items-center justify-content-center">
+            <div class="col-12 fs-1 text-center pb-3 mb-3 pe-2 d-flex align-items-center justify-content-center">
                 <i class="bi bi bi-x-circle-fill me-1 text-danger"></i>
                 <span>Out of stock</span>
             </div>
         }
-        <div class="ps-2 pe-2 pb-1 d-flex align-items-center flex-grow-1">
-            <form method="post" asp-controller="Cart" asp-action="AddToCart" id="add-to-cart-form" class="w-100">
-                <input type="hidden" name="id" value="@Model.Id"/>
-                <button type="submit" class="btn btn-primary w-100 p-3">Add to cart</button>
-            </form>
-        </div>
+
     </div>
 </div>
 
