other category for miscellaneous items

--- a/PCPartsStore/Views/Shared/_Layout.cshtml
+++ b/PCPartsStore/Views/Shared/_Layout.cshtml
@@ -98,6 +98,10 @@
                                             <a class="nav-link text-dark" asp-action="Motherboard"
                                                asp-controller="Product">Motherboards</a>
                                         </li>
+                                        <li>
+                                            <a class="nav-link text-dark" asp-action="Other"
+                                               asp-controller="Product">Other</a>
+                                        </li>
                                     </ul>
                                 </div>
                             </ul>
