Added other products page in admin panel Updated readme to have instalation documentation

--- a/PCPartsStore/Views/Product/Index.cshtml
+++ b/PCPartsStore/Views/Product/Index.cshtml
@@ -44,6 +44,12 @@
                 <i class="bi bi-motherboard"></i>
                 <span class="category-box-tooltip" style="font-size: 14px">Go to Motherboard products</span>
             </a>
+            <a asp-action="Other" asp-controller="Product"
+               class="product-box-add nav-link text-dark col-auto d-flex align-items-center justify-content-center bg-white border border-3">
+                <i class="bi bi-collection"></i>
+                <span class="category-box-tooltip" style="font-size: 14px">Go to Other products</span>
+            </a>
+
         </div>
     </div>
 </div>
