fixed bug with order page product categories page

--- a/PCPartsStore/Views/Shared/_Layout.cshtml
+++ b/PCPartsStore/Views/Shared/_Layout.cshtml
@@ -77,7 +77,7 @@
                                     @*         </li> *@
                                     @*     } *@
                                     @* </ul> *@
-                                    <a class="nav-link text-dark dropdown-toggle" asp-action="Index"
+                                    <a class="nav-link text-dark dropdown-toggle" asp-action="ProductCategories"
                                        asp-controller="Product">
                                         Products
                                     </a>
