--- a/PCPartsStore/Views/Product/Edit.cshtml
+++ b/PCPartsStore/Views/Product/Edit.cshtml
@@ -13,7 +13,7 @@
                 <span asp-validation-for="Id" class="text-danger"></span>
             </div>
             <label asp-for="Id" class="form-label"></label>
-            <input asp-for="Id" class="form-control">
+            <input asp-for="Id" class="form-control" readonly>
         </div>
         <div class="mb-3">
             <div>
