about the site component added to home page

--- a/PCPartsStore/Views/Home/Index.cshtml
+++ b/PCPartsStore/Views/Home/Index.cshtml
@@ -30,7 +30,27 @@
     </button>
 </div>
 
-<div class="col-lg-12 col-sm-auto d-flex flex-wrap mt-5 justify-content-center">
+
+<div class="features">
+    <div class="feature">
+        <i class="bi bi-arrow-counterclockwise"></i>
+        <div class="feature-text">Return policy</div>
+    </div>
+    <div class="feature">
+        <i class="bi bi-headset"></i>
+        <div class="feature-text">24/7 Customer Support</div>
+    </div>
+    <div class="feature">
+        <i class="bi bi-truck"></i>
+        <div class="feature-text">Express Shipping</div>
+    </div>
+    <div class="feature">
+        <i class="bi bi-calendar3"></i>
+        <div class="feature-text">Credit</div>
+    </div>
+</div>
+
+<div class="col-lg-12 col-sm-auto d-flex flex-wrap mt-2 justify-content-center">
     @foreach (var product in Model)
     {
         <div class="product-box bg-white border border-3 gx-1 d-flex align-items-center">
