--- a/PCPartsStore/Views/Cart/OrderPlaced.cshtml
+++ b/PCPartsStore/Views/Cart/OrderPlaced.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
-    ViewData["Title"] = "OrderPlaced";
+    ViewData["Title"] = "Order placed";
 }
 
-<h1>OrderPlaced</h1>
+<h1>Order placed</h1>
 <div class="d-flex justify-content-center">
     <div class="text-center">
         <i class="bi bi-check-circle text-success" style="font-size: 15em"></i>
